--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -24,8 +24,7 @@ jobs:
       fail-fast: true
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
@@ -46,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: ${{ runner.os }}/${{ runner.arch }}
+          platforms: linux/amd64
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
           build-args: |
@@ -60,8 +59,7 @@ jobs:
       fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
@@ -82,7 +80,78 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: ${{ runner.os }}/${{ runner.arch }}
+          platforms: linux/amd64
+          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
+          build-args: |
+            REGISTRY=${{ env.REGISTRY }}
+            REPOSITORY=${{ github.repository }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  # Image for running key4hep
+  build-arm:
+    needs: build
+    strategy:
+      fail-fast: true
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: linux/arm64
+          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
+          build-args: |
+            REGISTRY=${{ env.REGISTRY }}
+            REPOSITORY=${{ github.repository }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  build-arm-cvmfs:
+    needs: build-arm
+    strategy:
+      fail-fast: false
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: linux/arm64
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
           build-args: |
