--- a/Docker/alma9/alma9-build/Dockerfile
+++ b/Docker/alma9/alma9-build/Dockerfile
@@ -16,7 +16,9 @@ RUN dnf update -y && \
                    # Needed by Spack
                    bzip2 unzip \
                    # Needed by LCG
-                   zlib-devel libuuid-devel && \
+                   zlib-devel libuuid-devel \
+                   # Useful to have
+                   strace && \
     # For building and CI
     dnf install -y ccache mold && \
     # dnf remove -y NetworkManager xorg-x11-fonts-ISO8859-1-100dpi dejavu-sans-fonts selinux-policy && \
